--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vscode-api-client-lite",
   "displayName": "API Client Lite",
-  "description": "REST Client for Visual Studio Code",
+  "description": "Rest API Client for VS Code. Thunder Client / Postman alternative",
   "version": "0.26.0",
   "publisher": "KomaKamaki",
   "icon": "images/rest_icon.png",
