--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "vscode": "^1.81.0"
   },
   "categories": [
-    "Other",
+    "Testing",
     "Snippets",
     "Linters",
     "Programming Languages"
